[package]
name = "gpx_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.91"
gpx = "0.8.6"
geo-types = { version = "0.7.8", features = ["serde"] }